--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -12,6 +12,6 @@
             </div>
         </div>
     </div>
-<div id="ajax-content" class="animate__animated"></div>
+<div id="ajax-content"></div>
 <div id="ajax-pagination"></div>
 {% endblock %}
