Final index remove clean-up.

--- a/templates/shared/layout.html
+++ b/templates/shared/layout.html
@@ -20,7 +20,7 @@
         <header class="mb-3 fixed-top position-sticky">
             <nav class="navbar navbar-expand-xl navbar-light bg-light border-bottom box-shadow">
                 <div class="container-lg">
-                    <a class="navbar-brand" href="{{ url_for('main.index') }}"><img src="{{ url_for('static', filename=config['IMAGE_FOLDER'] + 'favicon.ico') }}" style="width: 35px; height: 35px;" alt="..."></a>
+                    <a class="navbar-brand" href="{{ url_for('products.index') }}"><img src="{{ url_for('static', filename=config['IMAGE_FOLDER'] + 'favicon.ico') }}" style="width: 35px; height: 35px;" alt="..."></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
