--- a/templates/admin/admin_layout.html
+++ b/templates/admin/admin_layout.html
@@ -32,7 +32,7 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="{{ url_for('main.index') }}">Сайт</a>
+                                <a class="nav-link text-dark" href="{{ url_for('products.index') }}">Сайт</a>
                             </li>
                             {# All items below #} <li class="nav-item ms-auto"></li> {# will be right-sided #}
 
