--- a/templates/shared/layout.html
+++ b/templates/shared/layout.html
@@ -76,7 +76,7 @@
 <footer class="text-center p-0 bg-light text-muted border-top mt-3">
     <div class="text-center bg-light m-0 p-2">
         ©
-        <a href="https://t.me/denyskalinovskyi" class="text-reset">Каліновський Денис</a>
+        <a href="https://t.me/denyskalinovskyi" class="text-reset">Denys Kalinovskyi</a>
     </div>
 </footer>
 </body>
