Revert "Changed title to match shop name."
This reverts commit cb73ab97ff5c87cb731574338a70e70ae45d1d97.

--- a/templates/shared/layout.html
+++ b/templates/shared/layout.html
@@ -11,7 +11,7 @@
         {% block script %}
             {% include 'shared/script.html' %}
         {% endblock %}
-        <title>{% block title %}{% endblock %} - KIShop</title>
+        <title>{% block title %}{% endblock %} - IShop</title>
     {% endblock %}
 </head>
 <body>
