--- a/templates/admin/products.html
+++ b/templates/admin/products.html
@@ -26,6 +26,7 @@
                 <th><input name="stock" type="text"></th>
                 <th><input name="specs" type="text"></th>
                 <th><input name="updated" type="text"></th>
+                <th><a class="btn btn-success" href="{{ url_for('.product') }}">➕</a></th>
                 <input type="submit" hidden>
             </form>
         </tr>
