--- a/templates/shared/layout.html
+++ b/templates/shared/layout.html
@@ -17,7 +17,7 @@
 <body>
 <div class="min-vh-100">
     {% block navbar %}
-        <header class="mb-3 fixed-top position-sticky">
+        <header class="mb-3">
             <nav class="navbar navbar-expand-xl navbar-light bg-light border-bottom box-shadow">
                 <div class="container-lg">
                     <a class="navbar-brand" href="{{ url_for('products.index') }}"><img src="{{ url_for('static', filename=config['IMAGE_FOLDER'] + 'favicon.ico') }}" style="width: 35px; height: 35px;" alt="..."></a>
