--- a/templates/posts/posts_response.html
+++ b/templates/posts/posts_response.html
@@ -1,7 +1,7 @@
-<div class="col-8 mx-auto">
+<div class="mx-auto row-cols-xl-2 row-cols-1 row g-3 mb-3">
     {% for post in posts %}
-        <div class="mb-3">
-            <div class="card">
+        <div class="col">
+            <div class="card hover-shadow h-100">
                 {% if post.picture %}
                     <img src="{{ url_for('static', filename=config['POST_UPLOAD_FOLDER'] + post.picture)}}"
                          class="card-img-top"
@@ -12,8 +12,16 @@
                     <p class="card-text">{{ post.content|truncate(500) }}</p>
                 </div>
                 <div class="card-footer text-muted">
-                    <div class="d-inline-block float-start">{{ post.updated.strftime('%d.%m.%Y %H:%M') }}</div>
-                    <div class="d-inline-block float-end">{{ post.get_author_name() }}</div>
+                    <div>
+                        <div class="d-inline-block w-50 text-start float-start">{{ post.updated.strftime('%d.%m.%Y %H:%M') }}</div>
+                        <div class="d-inline-block w-50 text-end float-end">{{ post.get_author_name() }}</div>
+                    </div>
+                    {% if current_user.has_role('editor') %}
+                        <div class="col-12 p-0">
+                            <a class="btn btn-warning col-6 float-start" href="{{ url_for('admin.post', post_id=post.id) }}">Редагувати</a>
+                            <a class="btn btn-danger col-6 float-end" href="{{ url_for('admin.post', post_id=post.id, delete=1) }}">Видалити</a>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
