--- a/templates/contact/index.html
+++ b/templates/contact/index.html
@@ -1,6 +1,41 @@
 {% extends "shared/layout.html" %}
 {{ super() }}
-{% block title %}Pagename{% endblock %}
+{% block title %}Зв'язатися з нами{% endblock %}
 {% block content %}
-*Contact form*
+    <div class="mx-auto mb-3 col-12 col-lg-8">
+        <div class="card mb-3">
+            <div class="card-body">
+                <h5 class="card-title">Наші контакти:</h5>
+                <div class="list-group">
+                    <span class="list-group-item list-group-item-action list-group-item-primary">📱 +38(111)111-11-11</span>
+                    <span class="list-group-item list-group-item-action list-group-item-danger">📱 +38(222)222-22-22</span>
+                    <span class="list-group-item list-group-item-action list-group-item-warning">📱 +38(333)333-33-33</span>
+                    <span class="list-group-item list-group-item-action">📬 kishop-mailer@gmail.com</span>
+                </div>
+            </div>
+        </div>
+        <div class="mb-3">
+            <button class="btn btn-secondary w-100" type="button" data-bs-toggle="collapse" data-bs-target="#appeal-form" aria-expanded="false" aria-controls="appeal-form">
+                Зв'язатися з нами
+            </button>
+            <div id="appeal-form" class="collapse mb-3">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="card-text">
+                            <form method="post" enctype="multipart/form-data">
+                                {{ form.hidden_tag() }}
+                                {{ form.title.label }} {{ form.title(class_="form-control mb-3") }}
+                                {{ form.content.label }} {{ form.content(class_="form-control mb-3", style="height: 40vh;") }}
+                                {{ form.email.label }} {{ form.email(class_="form-control mb-3") }}
+                                {{ form.phone.label }} {{ form.phone(class_="form-control mb-3") }}
+                                {{ form.firstname.label }} {{ form.firstname(class_="form-control mb-3") }}
+                                {{ form.submit(class_="w-100 px-auto btn btn-primary") }}
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
