--- a/templates/admin/posts.html
+++ b/templates/admin/posts.html
@@ -1,39 +1,54 @@
 {% extends "admin/admin_layout.html" %}
 {{ super() }}
+{% block script %}
+    {{ super() }}
+    <script type="text/javascript" src="{{ url_for('static', filename='script/ajax.js') }}" defer></script>
+{% endblock %}
 {% block title %}Новини{% endblock %}
 {% block content %}
-    <table class="table table-sm table-responsive table-bordered table-striped table-light table-hover mb-0">
+    <table class="table table-sm table-responsive table-bordered table-striped table-light table-hover mb-3">
         <thead>
         <tr>
+            <th>#</th>
             <th>ID</th>
+            <th>Картинка</th>
             <th>Заголовок</th>
             <th>Текст</th>
-            <th>Ціна</th>
-            <th>Знижка</th>
-            <th>В наявності</th>
-            <th>Характеристики</th>
+            <th>Автор</th>
             <th>Востаннє оновлено</th>
+            <th>Створено</th>
+            <th><a class="btn btn-success" href="{{ url_for('.product') }}">➕</a></th>
+        </tr>
+        <tr>
+            <form id="search_form">
+                <th></th>
+                <th><input name="id" type="text"></th>
+                <th></th>
+                <th><input name="title" type="text"></th>
+                <th><input name="content" type="text"></th>
+                <th><input name="author" type="text"></th>
+                <th><input name="updated" type="text"></th>
+                <th><input name="created" type="text"></th>
+                <th>
+                    <select name="items_per_page" id="items_per_page_selector" class="form-control" title="Кількість записів на сторінці">
+                        <option value="20" selected>20</option>
+                        <option value="50">50</option>
+                        <option value="100">100</option>
+                        <option value="200">200</option>
+                    </select>
+                </th>
+                <input type="submit" hidden>
+            </form>
         </tr>
         </thead>
         <tbody id="ajax-content">
-        {% for user in users %}
-            <tr>
-                <td>{{ user.id }}</td>
-                <td>{{ user.username }}</td>
-                <td>{{ user.email }}</td>
-                <td>{{ user.firstname }}</td>
-                <td>{{ user.phone }}</td>
-                <td>{{ user.settlement }}</td>
-                <td>{{ user.address }}</td>
-                <td>{{ user.registered_on }}</td>
-                <td>{{ user.last_login }}</td>
-                <td>{{ '➕' if user.confirmed else '➖' }}</td>
-                <td>
-                    <a class="btn btn-info" href="{{ url_for('admin_users', user_id=user.id) }}">✏</a>
-                    <a class="btn btn-danger" href="{{ url_for('admin_users', user_id=user.id, delete='1') }}">🗑</a>
-                </td>
-            </tr>
-        {% endfor %}
         </tbody>
     </table>
+    <div id="ajax-pagination"></div>
+    <div id="ajax-spinner" hidden>
+        <div class="d-flex justify-content-center">
+            <div class="spinner-border text-primary">
+            </div>
+        </div>
+    </div>
 {% endblock %}
