--- a/templates/auth/mails/forgot_password.html
+++ b/templates/auth/mails/forgot_password.html
@@ -1,3 +1,3 @@
-<pre>Відновлення профіля на KIShop</pre>
+<h5>Відновлення профіля на KIShop</h5>
 <p>Будь-ласка, перейдіть по наступному посиланню щоб відновити пароль:</p>
 <p><a href="{{ change_url }}">{{ change_url }}</a></p>
