--- a/templates/basket/order_info.html
+++ b/templates/basket/order_info.html
@@ -1,17 +1,21 @@
 {% extends "shared/layout.html" %}
 {{ super() }}
-{% block title %}Корзина{% endblock %}
+{% block title %}Замовлення #{{ order.id }}{% endblock %}
 {% block script %}
     {{ super() }}
     <script type="text/javascript" src="{{ url_for('static', filename='script/basket.js') }}" defer></script>
 {% endblock %}
 {% block content %}
-    <div class="">
-        <small>Унікальне посилання: <a href="{{ url_for('.order', order_token=order_token, _external=True) }}">{{ url_for('.order', order_token=order_token, _external=True) }}</a></small>
-        <div>
-            <h5 class="d-inline-block">Ваше замовлення</h5><span class="text-muted small float-end">#{{ order.id }}</span>
-            <div>Сума: <span class="text-success">₴{{ order.final_price }}</span></div>
-            <div>Статус: <span style="color: {{ order.get_status_color() }};">{{ order.get_status_string() }}</span></div>
+    <div class="col-6 mx-auto">
+        <div class="card">
+            <div class="card-body">
+                <div>
+                    <h5 class="d-inline-block">Ваше замовлення</h5><span class="text-muted small float-end">#{{ order.id }}</span>
+                    <div>Сума: <span class="text-success">₴{{ order.final_price }}</span></div>
+                    <div>Статус: <span style="color: {{ order.get_status_color() }};">{{ order.get_status_string() }}</span></div>
+                    <small>Унікальне посилання: <a class="link" href="{{ url_for('.order', order_token=order_token, _external=True) }}">{{ url_for('.order', order_token=order_token, _external=True) }}</a></small>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
