--- a/templates/admin/admin_layout.html
+++ b/templates/admin/admin_layout.html
@@ -48,7 +48,10 @@
                             {% endif %}
                             {% if current_user.has_role('support') %}
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" href="{{ url_for('admin.support') }}">Підтримка</a>
+                                    <a class="nav-link text-dark" href="{{ url_for('admin.orders') }}">Замовлення</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" href="{{ url_for('admin.appeals') }}">Зв'язок</a>
                                 </li>
                             {% endif %}
                             {% if current_user.has_role('admin') %}
