--- a/templates/admin/user.html
+++ b/templates/admin/user.html
@@ -9,6 +9,51 @@
             {{ form.hidden_tag() }}
             {{ form.username.label }} {{ form.username(class_="form-control mb-3") }}
             {{ form.email.label }} {{ form.email(class_="form-control mb-3") }}
+            <span>Ролі</span>
+            <div class="input-group">
+                <label class="form-check-label">
+                    <input class="form-check-input" type="checkbox" value="editor">
+                    Editor
+                </label>
+            </div>
+            <div class="input-group">
+                <label>
+                    <input class="form-check-input" type="checkbox" value="seller">
+                    Seller
+                </label>
+            </div>
+            <div class="input-group">
+                <label>
+                    <input class="form-check-input" type="checkbox" value="support">
+                    Support
+                </label>
+            </div>
+            <script>
+                let checks = document.querySelectorAll('input[type="checkbox"]'),
+                    roles = JSON.parse(document.querySelector('input[name="roles"]').value);
+
+                for(let check of checks) {
+                    if (roles.includes(check.value)) {
+                        check.checked = true;
+                    }
+                }
+
+                document.querySelector('form').addEventListener('submit', (e) => {
+                    for(let check of checks) {
+                        if (!check.checked) {
+                            roles = roles.filter((v) => {
+                                return v !== check.value;
+                            })
+                        }
+                        else if (!roles.includes(check.value)) {
+                            roles.push(check.value)
+                        }
+                    }
+                    document.querySelector('input[name="roles"]').value = JSON.stringify(roles);
+                    console.log(roles)
+                })
+
+            </script>
             <div class="mb-3">
                 <button class="btn btn-primary w-100 mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                     Змінити пароль
