--- a/templates/auth/mails/email_confirmation.html
+++ b/templates/auth/mails/email_confirmation.html
@@ -1,3 +1,3 @@
-<pre>Вітаємо з реєстрацією!</pre>
+<h5>Вітаємо з реєстрацією!</h5>
 <p>Будь-ласка, перейдіть по наступному посиланню для активації профіля:</p>
 <p><a href="{{ confirm_url }}">{{ confirm_url }}</a></p>
